<resources>
    <string name="app_name">ScoreKeeperSolution</string>
    <string name="title_string1">ScoreKeeper</string>
    <string name="teamA_title_string">Team A</string>
    <string name="teamB_title_string">Team B</string>
    <string name="increase_string">+</string>
    <string name="decrease_string">-</string>
    <string name="round_no1">Increment by 1</string>
    <string name="round_no5">Increment by 5</string>
    <string name="round_no10">Increment by 10</string>


</resources>
