<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBack">


        <TextView
            android:id="@+id/title_textview"
            style="@style/TextViewStyleScoreKeeper"
            android:layout_width="251dp"
            android:layout_height="152dp"
            android:text="@string/title_string1" />


    <TableRow>

        <TextView
            android:id="@+id/teamA_textview"
            style="@style/TextViewStyleTeam"
            android:layout_width="246dp"
            android:layout_height="match_parent"
            android:text="@string/teamA_title_string"

            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="112dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/teamA_score_textview"
            style="@style/textValue"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:text="10"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="63dp"
            tools:layout_editor_absoluteY="186dp" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/decrease_TeamA_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_string"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="362dp" />

        <Button
            android:id="@+id/increase_TeamA_Button3"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:text="@string/increase_string"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="267dp" />
    </TableRow>
    <TableRow>
        <TextView
        android:id="@+id/teamB_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teamB_title_string"
            style="@style/TextViewStyleTeam"

        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="112dp" />
    </TableRow>
    <TableRow>

        <TextView
            android:id="@+id/teamB_score_textview"
            style="@style/textValue"
            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:text="10"
            android:textSize="28sp"
            tools:layout_editor_absoluteX="294dp"
            tools:layout_editor_absoluteY="186dp" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/decrease_TeamB_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrease_string"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="362dp" />

        <Button
            android:id="@+id/increase_TeamB_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increase_string"
            tools:layout_editor_absoluteX="271dp"
            tools:layout_editor_absoluteY="362dp" />
    </TableRow>
    <TableRow>

        <RadioGroup
            android:id="@+id/roundingRadioGroup"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/noRoundingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/round_no1" />

            <RadioButton
                android:id="@+id/noRoundingRadioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_no5" />

            <RadioButton
                android:id="@+id/noRoundingRadioButton10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/round_no10" />


        </RadioGroup>

    </TableRow>









</TableLayout>